# Skelly

./: .gitignore  README.md  pyproject.toml
Neuer Test/: pom.xml
src/skelly/: cli.py
src/skelly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/skelly/core/: builder.py  exceptions.py  models.py  template_renderer.py
src/skelly/factories/: backend_factory.py  base.py  frontend_factory.py
src/skelly/strategies/: __init__.py  base.py  custom.py  django.py  express.py  hexagonal.py  java.py
src/skelly/strategies/architecture/: __init__.py  custom.py  hexagonal.py  layered.py
src/skelly/strategies/backend/: __init__.py  django.py  express.py  java_spring.py
src/skelly/strategies/frontend/: __init__.py  angular.py  lit.py  react.py
src/skelly/templates/express/hexagonal/: index.js.j2
src/skelly/templates/express/hexagonal/adapter/: ExampleController.js.j2  ExamplePersistenceAdapter.js.j2  persistence_index.js.j2  web_index.js.j2
src/skelly/templates/express/hexagonal/application/: CreateExampleUseCase.js.j2  ExampleRepository.js.j2  ExampleService.js.j2  GetExampleUseCase.js.j2  port_in_index.js.j2  port_out_index.js.j2  service_index.js.j2
src/skelly/templates/express/hexagonal/domain/: Example.js.j2  (+1 more)
src/skelly/templates/java_spring/: application.properties.j2  pom.xml.j2
src/skelly/templates/java_spring/hexagonal/: Application.java.j2
testmitjav/server/: pom.xml
testmitjav/server/src/main/resources/: application.properties
tests/: test_builder.py  test_factories.py  test_models.py  test_strategies.py  test_templates.py
(+29 files in other folders)
