[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skelly"
version = "0.1.0"
description = "Ein CLI-Tool für Architektur-Scaffolding"
authors = [{ name = "Daniel", email = "daniel-fischer304@tutanota.de" }]
dependencies = [
    "questionary",
    "jinja2",
    "rich"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
skelly = "skelly.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skelly = ["templates/**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]